@@ -32,7 +32,7 @@ MENUTOGGLENUMBERS,MENUWRAPLINES,MENUHILITELINE,MENUSYNTAXHILITE,MENUSHOWSPACE,ME
 ,MENUGOTODEF,MENUOPENINC,MENUGOTOLINE,MENUSEARCHDEF,MENUSEARCHGTK,MENUSEARCHQT,MENUSEARCHDOXY,MENUBACK,MENUFORWARD,MENUCONTINUE,MENUTOOLS,MENUABOUT,MENULOCALHELP,MENUONLINE,MENUGETPLUGS, \
 POPADDCUSTOM,MENUBLANK,MENUSPELLCHECK, \
 TABFOLDERPATH,TABFILEPATH,TABFILENAME,TABSPELLCHECK,TABSRCHILITE,TABHIDE,TABLOCK, \
-VERTICALCOPY,VERTICALCLEAR \
+VERTICALCOPY,VERTICALCUT,VERTICALCLEAR \
 };
 
 struct	menuDataStruct
